# clickhouse-async

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  prek.yml  release.yml  tests.yml  wheels.yml
benchmarks/: README.md  pyproject.toml  report.py  run.sh
benchmarks/adapters/: __init__.py  asynch_adapter.py  base.py  ca_adapter.py  cc_adapter.py
benchmarks/results/: environment.json  raw.jsonl  report.md  results.csv
benchmarks/scenarios/: __init__.py  common.py  concurrent_reads.py  insert_throughput.py  memory_ceiling.py  ping_latency.py  read_throughput.py
clickhouse_async/: __init__.py  _fast.py  _fast.pyi  _fast_read.c  _fast_read.pyi  _host_rotation.py  client.py  client_options.py  connection.py  connection_string.py  dsn.py  errors.py  exceptions.py  pool.py
clickhouse_async/protocol/: __init__.py  _client_env.py  block.py  compression.py  connection.py  constants.py  data_types.py  exception_packet.py  handshake.py  io.py  io_sync.py  packets.py  parameters.py  protocol_types.py  query.py  query_packet.py  server_packets.py  socket.py  stream.py  wire_format.py
clickhouse_async/types/: __init__.py  _datetime_helpers.py  _json_helpers.py  _parser.py  aggregate.py  base.py  composite.py  datetime.py  decimal.py  enums.py  geo.py  json_type.py  net.py  primitive.py  string.py  variant.py
scripts/: act.sh  benchmark_compression.py  clickhouse.sh  coverage.sh
scripts/clickhouse-config/: listen-all.xml
src/: decode_strings.rs  lib.rs  varuint.rs
tests/: conftest.py  pytest_plugins.py  test_client.py  test_client_options.py  test_client_with_connection_string.py  test_connection_string.py  test_data_types.py  test_data_types_integration.py  test_integration.py  test_protocol.py
tests/containers/: clickhouse.py
tests/integration/: conftest.py  test_compression.py  test_resilience.py  test_smoke.py  test_sparse.py
tests/perf/: conftest.py  test_perf_block_read.py  test_perf_block_write.py  test_perf_datetime_read.py  test_perf_primitive_read.py  test_perf_string_read.py  test_perf_string_write.py
tests/scenarios/: conftest.py  test_cell_towers.py  test_covid19.py  test_hackernews.py
tests/unit/: _mock_transport.py  _scripted_packets.py  conftest.py  test_block.py  test_client_columnar.py  test_client_env.py  test_client_execute.py  test_client_factories.py  test_client_insert.py  test_client_kill_query.py  test_client_lifecycle.py  test_client_resilience.py  test_client_streaming.py  test_compression.py  test_compression_default.py  test_connection_cancel.py  test_connection_handshake.py  test_connection_insert.py  test_connection_lifecycle.py  test_connection_multihost.py  test_connection_packet_loop.py  test_connection_parameters.py  test_connection_query.py  test_datetime_helpers.py  test_dsn.py  test_fast.py  test_fast_read.py  test_host_rotation.py  test_json_helpers.py  test_pool.py  test_pool_multihost.py  test_pool_reaper.py  test_protocol_io.py  test_protocol_packets.py  test_pure_python_fallback.py  test_query_packet.py  test_types.py  test_types_aggregate.py  test_types_composite.py  test_types_enums_lc.py  (+5 more)
