[project]
name = "clickhouse-async"
version = "0.1.0"
description = "An async Python client for ClickHouse over the native TCP protocol"
authors = [{ name = "Adrian Castro", email = "562969+IAL32@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["clickhouse", "async", "asyncio", "database", "tcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/IAL32/clickhouse-async"
Repository = "https://github.com/IAL32/clickhouse-async"
Issues = "https://github.com/IAL32/clickhouse-async/issues"

[project.optional-dependencies]
lz4 = [
    "lz4>=4",
    "clickhouse-cityhash>=1.0.2.4",
]
zstd = [
    "zstandard>=0.22",
    "clickhouse-cityhash>=1.0.2.4",
]
compression = ["clickhouse-async[lz4,zstd]"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-random-order>=1.1",
    "ty>=0.0.34",
    "ruff>=0.6",
    "prek>=0.1",
    "testcontainers>=4.0",
]

[tool.hatch.build.targets.sdist]
include = ["clickhouse_async"]

[tool.hatch.build.targets.wheel]
include = ["clickhouse_async"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
lint.select = ["E", "F", "I", "W", "N", "B", "A", "C4", "UP", "ANN", "RUF", "T"]
# Allow unused variables when underscore-prefixed
lint.ignore = ["E501"]
# Exclude a variety of commonly ignored directories
exclude = [".git", ".ruff_cache", "__pycache__", "dist", "build"]
# Same as Black
line-length = 88
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["clickhouse_async"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "clickhouse_async/__init__.py:__version__",
]
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "--random-order -m 'not integration'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running ClickHouse server",
    "requires_lz4: tests that require the [lz4] extra",
    "requires_zstd: tests that require the [zstd] extra",
]
