[project]
name = "clickhouse-async"
version = "0.2.0"
description = "An async Python client for ClickHouse over the native TCP protocol"
authors = [{ name = "Adrian Castro", email = "562969+IAL32@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["clickhouse", "async", "asyncio", "database", "tcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/IAL32/clickhouse-async"
Repository = "https://github.com/IAL32/clickhouse-async"
Issues = "https://github.com/IAL32/clickhouse-async/issues"

[project.optional-dependencies]
lz4 = [
    "lz4>=4",
    "clickhouse-cityhash>=1.0.2.4",
]
zstd = [
    "zstandard>=0.22",
    "clickhouse-cityhash>=1.0.2.4",
]
compression = ["clickhouse-async[lz4,zstd]"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "pytest-random-order>=1.1",
    "ty>=0.0.34",
    "ruff>=0.6",
    "prek>=0.1",
    "testcontainers>=4.0",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.build.targets.sdist]
include = ["clickhouse_async"]

[tool.hatch.build.targets.wheel]
include = ["clickhouse_async"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["clickhouse_async"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
fail_under = 94

[tool.ruff]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
lint.select = [
    "ANN",
    "ASYNC",
    "S",
    "E",
    "F",
    "I",
    "W",
    "N",
    "B",
    "A",
    "C4",
    "UP",
    "ANN",
    "RUF",
    "T",
    "FA",
    "T20",
    "SIM",
    "TID",
    "TC",
    "PERF",
    "PL",
]
lint.ignore = [
    # Allow unused variables when underscore-prefixed
    "E501",
    # Allow multiple nested `with` statements in single line
    "SIM117",
    # Forwarding lambdas in dispatch tables let us reference helpers
    # that are defined later in the same module without forward-decl
    # gymnastics (the lambda body's name lookup is deferred to call
    # time). Worth more than the rule's micro-optimisation.
    "PLW0108",
    # Structural-complexity rules from pylint's "design" group flag
    # legitimate complexity in our protocol-parser dispatch loops and
    # in the public ``Pool`` / ``Client`` / ``create_pool``
    # constructors that lean heavily on keyword args. Refactoring to
    # appease the limits would either fragment a state-machine match
    # statement or make the public surface harder to read.
    "PLR0911",  # too many returns (state machine handlers)
    "PLR0912",  # too many branches (parser dispatch)
    "PLR0913",  # too many arguments (public-API constructors)
    "PLR0915",  # too many statements
]
# Exclude a variety of commonly ignored directories
exclude = [".git", ".ruff_cache", "__pycache__", "dist", "build"]
# Same as Black
line-length = 88
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow `assert` statements
    "S",
    # Allow magic values in comparisons
    "PLR2004",
]
"scripts/*" = [
    # Scripts use print for terminal output
    "T20",
    # SQL strings in scripts are not user-facing injection vectors
    "S608",
    # assert is fine in scripts
    "S101",
    # Magic values in scripts are acceptable
    "PLR2004",
    # Lazy imports inside functions are intentional in scripts
    "PLC0415",
]
# ``Connection`` and ``Pool`` use ``assert`` for state-machine invariant
# narrowing (``assert self._reader is not None`` after a State check).
# These are real invariants — the State enum guarantees the values are
# set in the relevant states — and serve as type narrowing for ty / mypy.
"clickhouse_async/connection.py" = ["S101"]
"clickhouse_async/pool.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["clickhouse_async"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "clickhouse_async/__init__.py:__version__",
]
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "--random-order -m 'not integration and not scenarios'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running ClickHouse server",
    "scenarios: end-to-end tests against real example datasets (requires network + Docker)",
    "requires_lz4: tests that require the [lz4] extra",
    "requires_zstd: tests that require the [zstd] extra",
]
